# Page-Analyzer

./: .env.template  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
page_analyzer/: __init__.py  app.py  db.py  page_parser.py  validator.py
page_analyzer/templates/: base.html  index.html  page404.html  url_detail.html  urls.html
page_analyzer/templates/layouts/: base.html
